HBASE-27475 Use different jdks when running hadoopcheck in personality scripts

--- a/dev-support/Jenkinsfile
+++ b/dev-support/Jenkinsfile
@@ -203,6 +203,7 @@ pipeline {
             BASEDIR = "${env.WORKSPACE}/component"
             TESTS = "${env.SHALLOW_CHECKS}"
             SET_JAVA_HOME = "/usr/lib/jvm/java-11"
+            JAVA8_HOME="/usr/lib/jvm/java-8"
             // Activates hadoop 3.0 profile in maven runs.
             HADOOP_PROFILE = '3.0'
             OUTPUT_DIR_RELATIVE = "${env.OUTPUT_DIR_RELATIVE_GENERAL}"
