HBASE-27479 fix flaky test testClone in TestTaskMonitor

--- a/hbase-server/pom.xml
+++ b/hbase-server/pom.xml
@@ -333,6 +333,12 @@
       <artifactId>bcpkix-jdk15on</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>1.5.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <!-- Make sure resources get added before they are processed by placing this first
