--- a/dev-support/Jenkinsfile
+++ b/dev-support/Jenkinsfile
@@ -312,6 +312,7 @@ pipeline {
             OUTPUT_DIR_RELATIVE = "${env.OUTPUT_DIR_RELATIVE_JDK8_HADOOP2}"
             OUTPUT_DIR = "${env.WORKSPACE}/${env.OUTPUT_DIR_RELATIVE_JDK8_HADOOP2}"
             SET_JAVA_HOME = '/usr/lib/jvm/java-8'
+            SKIP_ERRORPRONE = true
           }
           steps {
             // Must do prior to anything else, since if one of them timesout we'll stash the commentfile
@@ -421,6 +422,7 @@ pipeline {
             SET_JAVA_HOME = '/usr/lib/jvm/java-8'
             // Activates hadoop 3.0 profile in maven runs.
             HADOOP_PROFILE = '3.0'
+            SKIP_ERRORPRONE = true
           }
           steps {
             // Must do prior to anything else, since if one of them timesout we'll stash the commentfile
@@ -530,8 +532,7 @@ pipeline {
             SET_JAVA_HOME = "/usr/lib/jvm/java-11"
             // Activates hadoop 3.0 profile in maven runs.
             HADOOP_PROFILE = '3.0'
-            // ErrorProne is broken on JDK11, see HBASE-23894
-            SKIP_ERROR_PRONE = 'true'
+            SKIP_ERRORPRONE = true
           }
           steps {
             // Must do prior to anything else, since if one of them timesout we'll stash the commentfile
