--- a/pom.xml
+++ b/pom.xml
@@ -1022,6 +1022,7 @@
         <artifactId>jsonassert</artifactId>
         <version>1.5.1</version>
         <scope>test</scope>
+      </dependency>
       <dependency>
         <groupId>org.apache.hbase</groupId>
         <artifactId>hbase-replication</artifactId>
