HBASE-27479 fix flaky test testClone in TestTaskMonitor (#4876)
Signed-off-by: Duo Zhang <zhangduo@apache.org>
(cherry picked from commit a2075f51a84676c4fac7eb697a21255abddf143a)

--- a/hbase-server/pom.xml
+++ b/hbase-server/pom.xml
@@ -346,6 +346,11 @@
       <artifactId>log4j-1.2-api</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <!-- Make sure resources get added before they are processed by placing this first
