--- a/hbase-server/pom.xml
+++ b/hbase-server/pom.xml
@@ -325,6 +325,11 @@
       <artifactId>reload4j</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <!-- Make sure resources get added before they are processed by placing this first
