HBASE-27501 The .flattened-pom.xml for some modules are not installed

--- a/pom.xml
+++ b/pom.xml
@@ -2117,6 +2117,7 @@
         <version>1.3.0</version>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
+          <updatePomFile>true</updatePomFile>
         </configuration>
         <executions>
           <!-- enable flattening -->
