HBASE-27501 The .flattened-pom.xml for some modules are not installed (#4893)
Signed-off-by: Bryan Beaudreault <bbeaudreault@apache.org>
(cherry picked from commit 84749b054c5697cb0f3240fa3c0f976cf5df865d)

--- a/pom.xml
+++ b/pom.xml
@@ -1906,6 +1906,7 @@
         <version>1.3.0</version>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
+          <updatePomFile>true</updatePomFile>
         </configuration>
         <executions>
           <!-- enable flattening -->
