--- a/pom.xml
+++ b/pom.xml
@@ -1900,6 +1900,7 @@
         <version>1.3.0</version>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
+          <updatePomFile>true</updatePomFile>
         </configuration>
         <executions>
           <!-- enable flattening -->
