HBASE-27510 Should use 'org.apache.hbase.thirdparty.io.netty.tryReflectionSetAccessible' (#4898)
Signed-off-by: Wei-Chiu Chuang <weichiu@apache.org>
(cherry picked from commit 3ffc0b55528c232c4e2fc0c67bc78a564591efb9)

--- a/pom.xml
+++ b/pom.xml
@@ -2866,7 +2866,7 @@
       <properties>
         <maven.compiler.release>${releaseTarget}</maven.compiler.release>
         <!-- TODO: replicate logic for windows support -->
-        <argLine>-Dio.netty.tryReflectionSetAccessible=true
+        <argLine>-Dorg.apache.hbase.thirdparty.io.netty.tryReflectionSetAccessible=true
           --add-modules jdk.unsupported
           --add-opens java.base/java.nio=ALL-UNNAMED
           --add-opens java.base/sun.nio.ch=ALL-UNNAMED
