--- a/hubspot-client-bundles/hbase-mapreduce-bundle/pom.xml
+++ b/hubspot-client-bundles/hbase-mapreduce-bundle/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.hubspot.hbase</groupId>
     <artifactId>hubspot-client-bundles</artifactId>
-    <version>2.5.1</version>
+    <version>${revision}</version>
     <relativePath>..</relativePath>
   </parent>
 
