HBASE-27485 HBaseTestingUtility minicluster requires log4j2

--- a/hbase-logging/src/test/resources/log4j2.properties
+++ b/hbase-logging/src/test/resources/log4j2.properties
@@ -46,11 +46,13 @@ logger.MetricsConfig.level = WARN
 logger.MetricsSinkAdapter.name = org.apache.hadoop.metrics2.impl.MetricsSinkAdapter
 logger.MetricsSinkAdapter.level = WARN
 
+# These two settings are workarounds against spurious logs from the minicluster.
+# See HBASE-4709
 logger.MetricsSystemImpl.name = org.apache.hadoop.metrics2.impl.MetricsSystemImpl
-logger.MetricsSystemImpl.level = WARN
+logger.MetricsSystemImpl.level = ERROR
 
 logger.MBeans.name = org.apache.hadoop.metrics2.util.MBeans
-logger.MBeans.level = WARN
+logger.MBeans.level = ERROR
 
 logger.directory.name = org.apache.directory
 logger.directory.level = WARN
@@ -68,3 +70,7 @@ logger.RSRpcServices.level = DEBUG
 
 logger.TestJul2Slf4j.name = org.apache.hadoop.hbase.logging.TestJul2Slf4j
 logger.TestJul2Slf4j.level = DEBUG
+
+# Avoid log flooded with chore execution time, see HBASE-24646 for more details.
+logger.ScheduledChore.name = org.apache.hadoop.hbase.ScheduledChore
+logger.ScheduledChore.level = INFO
