HBASE-27562 Publish SBOM artifacts (#4953)
Signed-off-by: Duo Zhang <zhangduo@apache.org>
(cherry picked from commit 5feb06bd69fa23eab4bd778275a034a5d47b446f)

--- a/pom.xml
+++ b/pom.xml
@@ -2527,6 +2527,19 @@
           </formats>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.cyclonedx</groupId>
+        <artifactId>cyclonedx-maven-plugin</artifactId>
+        <version>2.7.3</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>makeBom</goal>
+            </goals>
+            <phase>package</phase>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
     <extensions>
       <extension>
