--- a/hbase-shaded/hbase-shaded-mapreduce/pom.xml
+++ b/hbase-shaded/hbase-shaded-mapreduce/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase-shaded</artifactId>
-    <version>2.4.16-SNAPSHOT</version>
+    <version>2.4.16</version>
     <relativePath>..</relativePath>
   </parent>
   <artifactId>hbase-shaded-mapreduce</artifactId>
