--- a/hbase-archetypes/hbase-archetype-builder/pom.xml
+++ b/hbase-archetypes/hbase-archetype-builder/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase-archetypes</artifactId>
-    <version>2.4.16</version>
+    <version>2.4.17-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
