--- a/hbase-shaded/hbase-shaded-testing-util/pom.xml
+++ b/hbase-shaded/hbase-shaded-testing-util/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.apache.hbase</groupId>
     <artifactId>hbase-shaded</artifactId>
-    <version>2.4.17-SNAPSHOT</version>
+    <version>2.4.16</version>
     <relativePath>..</relativePath>
   </parent>
 
