--- a/pom.xml
+++ b/pom.xml
@@ -591,7 +591,7 @@
     <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
     <thrift.path>thrift</thrift.path>
     <thrift.version>0.14.1</thrift.version>
-    <zookeeper.version>3.5.5.7.2.17.0-SNAPSHOT</zookeeper.version>
+    <zookeeper.version>3.8.1</zookeeper.version>
     <jline.version>2.12</jline.version>
     <slf4j-reload4j.version>1.7.36</slf4j-reload4j.version>
     <clover.version>4.0.3</clover.version>
@@ -605,7 +605,7 @@
     <skyscreamer.version>1.5.1</skyscreamer.version>
     <kerby.version>1.1.1</kerby.version>
     <commons-crypto.version>1.0.0</commons-crypto.version>
-    <curator.version>4.3.0.7.2.17.0-SNAPSHOT</curator.version>
+    <curator.version>5.4.0</curator.version>
     <netty-for-minihdfs.version>4.1.86.Final</netty-for-minihdfs.version>
     <!-- Plugin Dependencies -->
     <build.helper.maven.version>3.0.0</build.helper.maven.version>
@@ -1102,6 +1102,14 @@
         <artifactId>zookeeper</artifactId>
         <version>${zookeeper.version}</version>
         <exclusions>
+          <exclusion>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+          </exclusion>
           <exclusion>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
