--- a/hbase-backup/pom.xml
+++ b/hbase-backup/pom.xml
@@ -29,6 +29,7 @@
   <artifactId>hbase-backup</artifactId>
   <name>Apache HBase - Backup</name>
   <description>Backup for HBase</description>
+  <!-- trigger build -->
   <dependencies>
     <!-- Intra-project dependencies -->
     <dependency>
