HBASE-27685 Enable code coverage reporting to SonarQube in HBase (#5076)
(cherry picked from commit 72d5a46899ef0866d777f0a9508649beed6d8dd3)

--- a/hbase-it/pom.xml
+++ b/hbase-it/pom.xml
@@ -304,7 +304,7 @@
           <forkedProcessTimeoutInSeconds>1800</forkedProcessTimeoutInSeconds>
           <argLine>-enableassertions -Xmx${failsafe.Xmx}
                 -Djava.security.egd=file:/dev/./urandom -XX:+CMSClassUnloadingEnabled
-                -verbose:gc -XX:+PrintCommandLineFlags  -XX:+PrintFlagsFinal</argLine>
+                -verbose:gc -XX:+PrintCommandLineFlags  -XX:+PrintFlagsFinal @{jacocoArgLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
