--- a/pom.xml
+++ b/pom.xml
@@ -962,6 +962,9 @@
     <shell-executable>bash</shell-executable>
     <!-- Still need this to ignore some errors when building javadoc-->
     <doclint>none</doclint>
+    <!-- Required for testing LDAP integration -->
+    <apacheds.version>2.0.0.AM26</apacheds.version>
+    <ldap-api.version>2.0.0</ldap-api.version>
   </properties>
   <!-- Sorted by groups of dependencies then groupId and artifactId -->
   <dependencyManagement>
