--- a/hbase-replication/pom.xml
+++ b/hbase-replication/pom.xml
@@ -76,6 +76,12 @@
     </dependency>
     <dependency>
       <groupId>org.apache.hbase</groupId>
+      <artifactId>hbase-client</artifactId>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hbase</groupId>
       <artifactId>hbase-zookeeper</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
