--- a/hbase-logging/src/test/resources/log4j.properties
+++ b/hbase-logging/src/test/resources/log4j.properties
@@ -48,7 +48,7 @@ log4j.appender.DRFA.layout.ConversionPattern=%d{ISO8601} %-5p [%t] %C{2}(%L): %m
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.target=System.err
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
-log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %-5p [%t (%X)] %C{2}(%L): %m%n
+log4j.appender.console.layout.ConversionPattern=%d{ISO8601} %-5p [%t%notEmpty{ %X}] %C{2}(%L): %m%n
 
 # Custom Logging levels
 
