HBASE-27808 Change flatten mode for oss in our pom file

--- a/pom.xml
+++ b/pom.xml
@@ -2140,6 +2140,7 @@
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
           <updatePomFile>true</updatePomFile>
+          <flattenMode>oss</flattenMode>
         </configuration>
         <executions>
           <!-- enable flattening -->
