HBASE-27808 Change flatten mode for oss in our pom file (#5201)
Signed-off-by: Duo Zhang <zhangduo@apache.org>
(cherry picked from commit a2cfa6822ae84b0a87d5e90c5e588cb900852eba)

--- a/pom.xml
+++ b/pom.xml
@@ -1918,6 +1918,7 @@
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
           <updatePomFile>true</updatePomFile>
+          <flattenMode>oss</flattenMode>
         </configuration>
         <executions>
           <!-- enable flattening -->
