--- a/pom.xml
+++ b/pom.xml
@@ -773,7 +773,7 @@
     </site>
   </distributionManagement>
   <properties>
-    <revision>3.0.0-alpha-4-SNAPSHOT</revision>
+    <revision>3.0.0-alpha-4</revision>
     <!-- override on command line to have generated LICENSE files include
          diagnostic info for verifying notice requirements -->
     <license.debug.print.included>false</license.debug.print.included>
